--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>coffee.synyx</groupId>
     <artifactId>navigation-bar</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
 
     <packaging>jar</packaging>
 
@@ -21,7 +19,7 @@
     <scm>
         <connection>scm:git:ssh://git@git.synyx.de/coffeenet/navigation-bar.git</connection>
         <developerConnection>scm:git:ssh://git@git.synyx.de/coffeenet/navigation-bar.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>navigation-bar-0.1.0</tag>
     </scm>
 
     <distributionManagement>
@@ -92,13 +90,13 @@
                         </goals>
                         <configuration>
                             <target>
-                                <echo message="move resources"/>
+                                <echo message="move resources" />
                                 <move todir="${destDir}">
                                     <fileset dir="${project.build.outputDirectory}/">
-                                        <exclude name="META-INF/"/>
+                                        <exclude name="META-INF/" />
                                     </fileset>
                                 </move>
-                                <delete dir="${basedir}/src" includeemptydirs="true"/>
+                                <delete dir="${basedir}/src" includeemptydirs="true" />
                             </target>
                         </configuration>
                     </execution>
