--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "navigation-bar",
-  "version": "1.0.0",
   "private": true,
   "description": "",
   "scripts": {
@@ -9,11 +8,15 @@
     "build": "webpack"
   },
   "author": "Tobias Schneider <schneider@synyx.de>",
+  "dependencies": {
+    "handlebars": "4.0.5"
+  },
   "devDependencies": {
-    "babel-loader": "6.2.4",
     "babel-core": "6.7.6",
+    "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
-    "webpack": "1.12.14"
+    "webpack": "1.12.14",
+    "handlebars-loader": "1.2.0"
   },
   "babel": {
     "presets": [
