--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>mustachejs</artifactId>
-            <version>2.2.1</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -76,6 +71,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>2.7</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.shared</groupId>
+                        <artifactId>maven-filtering</artifactId>
+                        <version>1.3</version>
+                    </dependency>
+                </dependencies>
             </plugin>
 
             <plugin>
