--- a/package.json
+++ b/package.json
@@ -8,15 +8,11 @@
     "build": "webpack"
   },
   "author": "Tobias Schneider <schneider@synyx.de>",
-  "dependencies": {
-    "handlebars": "4.0.5"
-  },
   "devDependencies": {
     "babel-core": "6.7.6",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
-    "webpack": "1.12.14",
-    "handlebars-loader": "1.2.0"
+    "webpack": "1.12.14"
   },
   "babel": {
     "presets": [
