--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "private": true,
   "description": "",
   "scripts": {
-    "postinstall": "npm run copy && npm run build",
+    "postinstall": "npm run linting && npm run copy && npm run build",
     "copy": "mkdir -p src/main/resources && cp -R navigation/css navigation/template src/main/resources",
-    "build": "webpack"
+    "build": "webpack",
+    "linting": "./node_modules/eslint/bin/eslint.js navigation/**; true"
   },
   "author": "Tobias Schneider <schneider@synyx.de>",
   "devDependencies": {
     "babel-core": "6.7.6",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
-    "webpack": "1.12.14"
+    "webpack": "1.12.14",
+    "eslint": "2.7.0"
   },
   "babel": {
     "presets": [
