--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>coffee.synyx</groupId>
     <artifactId>navigation-bar</artifactId>
-    <version>0.3.0-SNAPSHOT</version>
+    <version>0.3.0</version>
 
     <packaging>jar</packaging>
 
@@ -19,7 +19,7 @@
     <scm>
         <connection>scm:git:ssh://git@git.synyx.de/coffeenet/navigation-bar.git</connection>
         <developerConnection>scm:git:ssh://git@git.synyx.de/coffeenet/navigation-bar.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>navigation-bar-0.3.0</tag>
     </scm>
 
     <distributionManagement>
