--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>coffee.synyx</groupId>
     <artifactId>navigation-bar</artifactId>
-    <version>0.3.1-SNAPSHOT</version>
+    <version>0.4.0-SNAPSHOT</version>
 
     <packaging>jar</packaging>
 
@@ -12,8 +13,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${project.version}
-        </destDir>
+        <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}</destDir>
     </properties>
 
     <scm>
@@ -81,13 +81,13 @@
                         </goals>
                         <configuration>
                             <target>
-                                <echo message="move resources" />
+                                <echo message="move resources"/>
                                 <move todir="${destDir}">
                                     <fileset dir="${project.build.outputDirectory}/">
-                                        <exclude name="META-INF/" />
+                                        <exclude name="META-INF/"/>
                                     </fileset>
                                 </move>
-                                <delete dir="${basedir}/src" includeemptydirs="true" />
+                                <delete dir="${basedir}/src" includeemptydirs="true"/>
                             </target>
                         </configuration>
                     </execution>
