--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "babel-core": "6.7.6",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
+    "eslint": "2.7.0",
     "webpack": "1.12.14",
-    "eslint": "2.7.0"
+    "whatwg-fetch": "^1.0.0"
   },
   "babel": {
     "presets": [
