--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
     "coffee-fetch": "git+ssh://git@gitlab-test.synyx.coffee:seber/coffe-fetch.git#v0.1.0",
+    "css-loader": "^0.23.1",
     "eslint": "2.7.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "style-loader": "^0.13.1",
     "webpack": "1.12.14",
     "whatwg-fetch": "^1.0.0"
   },
