--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "",
   "scripts": {
-    "postinstall": "npm run linting && npm run copy && npm run build",
+    "postinstall": "npm run linting && npm run build",
     "copy": "mkdir -p src/main/resources && cp -R navigation/css src/main/resources",
     "build": "webpack",
     "linting": "./node_modules/eslint/bin/eslint.js navigation/**; true"
@@ -17,7 +17,9 @@
     "css-loader": "^0.23.1",
     "eslint": "2.7.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "1.12.14",
     "whatwg-fetch": "^1.0.0"
   },
