--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
     "coffee-fetch": "git+ssh://git@gitlab-test.synyx.coffee:seber/coffe-fetch.git#v0.1.0",
+    "common-tags": "^1.1.1",
     "css-loader": "^0.23.1",
     "eslint": "2.7.0",
     "extract-text-webpack-plugin": "^1.0.1",
