--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,12 @@
     </properties>
 
     <scm>
-        <connection>scm:git:ssh://git@gitlab-test.synyx.coffee/coffeenet/coffeenet-navigation-bar.git</connection>
-        <developerConnection>scm:git:ssh://git@gitlab-test.synyx.coffee/coffeenet/coffeenet-navigation-bar.git</developerConnection>
+        <connection>
+            scm:git:ssh://git@gitlab-test.synyx.coffee/coffeenet/coffeenet-navigation-bar.git
+        </connection>
+        <developerConnection>
+            scm:git:ssh://git@gitlab-test.synyx.coffee/coffeenet/coffeenet-navigation-bar.git
+        </developerConnection>
         <tag>HEAD</tag>
     </scm>
 
