--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
     "coffee-fetch": "git+ssh://git@gitlab-test.synyx.coffee:coffeenet/coffee-fetch.git#v0.1.0",
-    "common-tags": "^1.1.1",
-    "css-loader": "^0.23.1",
+    "common-tags": "1.1.1",
+    "css-loader": "0.23.1",
     "eslint": "2.7.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.8.5",
+    "style-loader": "0.13.1",
+    "url-loader": "0.5.7",
     "webpack": "1.12.14",
-    "whatwg-fetch": "^1.0.0"
+    "whatwg-fetch": "1.0.0"
   },
   "babel": {
     "presets": [
