--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>coffee.synyx</groupId>
@@ -78,13 +79,13 @@
                         </goals>
                         <configuration>
                             <target>
-                                <echo message="move resources" />
+                                <echo message="move resources"/>
                                 <move todir="${destDir}">
                                     <fileset dir="${project.build.outputDirectory}/">
-                                        <exclude name="META-INF/" />
+                                        <exclude name="META-INF/"/>
                                     </fileset>
                                 </move>
-                                <delete dir="${basedir}/src" includeemptydirs="true" />
+                                <delete dir="${basedir}/src" includeemptydirs="true"/>
                             </target>
                         </configuration>
                     </execution>
