--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,10 @@
 
     <scm>
         <connection>
-            scm:git:ssh://git@gitlab-test.synyx.coffee/coffeenet/coffeenet-navigation-bar.git
+            scm:git:ssh://git@gitlab.synyx.de/coffeenet/coffeenet-navigation-bar.git
         </connection>
         <developerConnection>
-            scm:git:ssh://git@gitlab-test.synyx.coffee/coffeenet/coffeenet-navigation-bar.git
+            scm:git:ssh://git@gitlab.synyx.de/coffeenet/coffeenet-navigation-bar.git
         </developerConnection>
         <tag>HEAD</tag>
     </scm>
