replaced maven-exec plugin with frontend-maven-plugin
attention: frontend-maven-plugin will manage nodejs and npm for you, too

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.13.1",
-    "whatwg-fetch": "1.0.0"
+    "whatwg-fetch": "1.0.0",
+    "xmldom": "0.1.16",
+    "xpath": "0.0.23"
   },
   "babel": {
     "presets": [
