--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,13 @@ language: java
 
 jdk:
   - oraclejdk8
+
+env:
+  - NODE_VERSION=6
+
+install:
+  - nvm install $NODE_VERSION
+
+script:
+  - nvm use $NODE_VERSION
+  - ./mvnw clean install
