--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.webjars</groupId>
+            <groupId>org.webjars.bower</groupId>
             <artifactId>bootstrap</artifactId>
-            <version>3.3.6</version>
+            <version>3.3.7</version>
         </dependency>
     </dependencies>
 
