--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>coffee.synyx</groupId>
     <artifactId>navigation-bar</artifactId>
-    <version>0.13.0-SNAPSHOT</version>
+    <version>0.12.1</version>
 
     <packaging>jar</packaging>
 
