--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>coffee.synyx</groupId>
     <artifactId>navigation-bar</artifactId>
-    <version>0.15.0</version>
+    <version>0.16.0-SNAPSHOT</version>
 
     <packaging>jar</packaging>
 
