travis add m2 caching

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: java
 jdk:
   - oraclejdk8
 
+cache:
+  directories:
+    - $HOME/.m2
+
 env:
   - MAVEN_CLI_OPTS="--batch-mode"
   - NODE_VERSION=6
