--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ deploy:
       repo: coffeenet/coffeenet-navigation-bar
 
   - provider: script
-    script: ./mvnw $MAVEN_CLI_OPTS gpg:sign nexus-staging:release --settings ${TRAVIS_BUILD_DIR}/.travis.settings.xml -Prelease
+    script: ./mvnw $MAVEN_CLI_OPTS deploy --settings ${TRAVIS_BUILD_DIR}/.travis.settings.xml -Prelease
     skip_cleanup: true
     on:
       tags: true
